# pinkhaus

./: .env  .gitignore  .mcp.json  Backtest.R  DEVELOPING.md  Loading_misc.R  MergeData.R  README.md  Untitled(1).R  alembic.ini  backtest.py  data_fetcher.R  database.py  dummy_server.py  evaluate_open_markets.py  free_data_pull.py  justfile  letta.sh  models.py  odds_formatting_helpers.py  open-webui.sh  pyproject.toml  run_everything.py  run_hy_jupyter.sh
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: beige-book.yml  grant.yml  ominari.yml  pinkhaus-models.yml  proto-verification.yml  sync-podcasts.yml  test-matrix.yml
alembic/: env.py
alembic/versions/: 44472f3500d0_add_position_names_to_market.py  e0f60f4f282b_add_game_fields_to_market.py
polls/: sources.txt  twitter_fetch.Rmd  twitter_fetch.nb.html
projects/beige-book/: .gitignore  API_SPEAKER_IDENTITY.md  ARCHITECTURE.md  README.md  README_SPEAKER_DIARIZATION.md  SERIALIZATION_SUMMARY.md  SPEAKER_EMBEDDING_RESEARCH.md  SPEAKER_IDENTITY_DESIGN.md  SPEAKER_IDENTITY_GUIDE.md  api_transcriptions.db  demo_diarization.py  justfile  pyproject.toml  run_api.py  test_feed_error.py  test_speaker_identity.py
projects/beige-book/.flox/: env.json
projects/beige-book/.flox/env/: manifest.toml
projects/beige-book/beige_book/: __init__.py  api.py  audio_processor.py  blog_processor.py  cli.py  cli_db_io.py  database.py  database_io.py  downloader.py  feed_parser.py  main.py  models.py  models_betterproto.py  proto_models.py  requests.proto  requests_pb2.py  run_api.py  service.py  speaker_diarizer.py  speaker_matcher.py  transcriber.py  transcriber_betterproto.py  transcriber_dataclass.py  transcription.proto  transcription_pb2.py  voice_embeddings.py
projects/beige-book/demos/: README.md  demo_diarization.py
projects/beige-book/examples/: api_to_database.py  database_usage.py  library_usage.py  protobuf_usage.py  speaker_diarization_example.py  speaker_identity_examples.py  speaker_identity_quickstart.py  speaker_identity_working_demo.py  speaker_tracking_demo.py
projects/beige-book/tests/: .gitignore  README.md  test_api.py  test_database.py  test_database_export_import.py  test_database_io.py  test_harvard_diarization.py  test_helpers.py  test_simple.py  test_speaker_id_integration.py  test_speaker_id_simple.py  test_speaker_identity.py  test_transcriber.py
projects/grant/: README.md  justfile  protobuf_transcriptions.db  pyproject.toml  test_grpc_client.py
projects/grant/.flox/: env.json
projects/grant/.flox/env/: manifest.toml
projects/grant/grant/: __init__.py  chunking.py  cli.py  database.py  embeddings.py  grpc_server.py  ollama_client.py  rag.py  vector_store.py
projects/grant/tests/: README.md  __init__.py  conftest.py  test_chunking.py  test_embeddings.py  test_grpc_server.py  test_ollama_client.py  test_rag.py  test_vector_store.py
projects/ominari/: .gitignore  alembic.ini  backfill_position_names.py  backfill_positions.py  backtest.py  database.py  database_fixer.py  db_inspector.py  dummy_server.py  evaluate_open_markets.py  external_pb2.py  external_pb2_grpc.py  find_opportunities.py  free_data_pull.py  get_oracle_odds.py  kelly_multimarket.py  live_trading_overtime.py  main.py  match_markets.py  models.py  odds_formatting_helpers.py  overtime_bet_sync.py  performance.py  pyproject.toml  run_everything.py  run_scheduler.sh  setup_scheduler.py  signals.py
projects/ominari/.flox/env/: manifest.toml
projects/ominari/alembic/: env.py
projects/ominari/alembic/versions/: 2dab8300ab59_add_performance_indexes_to_odd_market.py  44472f3500d0_add_position_names_to_market.py  7b9d4257785d_remove_non_null_and_default_for_position.py  8502c7f8738a_add_bet_and_bettingsession_objects.py  bf44b253f239_add_position_to_odd.py  f829409364fc_initial_schema.py
projects/ominari/log/: watchdog.3e14f3a7.log.2025-08-03
projects/ominari/proto/: external.proto
projects/ominari/run/: x86_64-linux.ominari.dev  x86_64-linux.ominari.run
projects/pinkhaus-models/: README.md  flake.nix  pyproject.toml  setup.sh  test_sqlalchemy_migration.py
projects/pinkhaus-models/.flox/: env.json
projects/pinkhaus-models/.flox/env/: manifest.toml
projects/pinkhaus-models/pinkhaus_models/: __init__.py  database.py  database_sqlalchemy.py  models.py  orm.py
projects/pinkhaus-models/pinkhaus_models/proto/: __init__.py
projects/pinkhaus-models/pinkhaus_models/proto/beige_book/: __init__.py  requests.proto  requests_pb2.py  requests_pb2_grpc.py  transcription_pb2.py  transcription_pb2_grpc.py
projects/pinkhaus-models/pinkhaus_models/proto/ominari/: __init__.py  external.proto  external_pb2.py  external_pb2_grpc.py
projects/pinkhaus-models/scripts/: generate_proto.py  verify_proto.py
projects/pinkhaus-models/tests/: __init__.py  test_database.py  test_models.py
projects/sync-podcasts/: .gitignore  README.md  SYNC-blogs.sh  SYNC-podcasts.sh  SYNC.sh  pyproject.toml
projects/sync-podcasts/.flox/: env.json
projects/sync-podcasts/.flox/env/: manifest.toml
projects/sync-podcasts/sync_podcasts/: __init__.py  __main__.py  cli.py  sync.py  validate_feed.py
projects/sync-podcasts/tests/: __init__.py  test_blog_round_robin.py  test_cli.py  test_feed_validation_on_startup.py  test_feeds_reload.py  test_older_episodes.py  test_robustness.py  test_round_robin.py  test_startup_report.py  test_sync_config.py  test_validate_feed.py  utils.py
projects/sync-podcasts/tests/fixtures/: feed1.xml  feed2.xml  feed3.xml  feed4.xml  test_feeds.toml  test_feeds_with_blog.toml
resources/fc/: feeds-small.toml  feeds-text.toml  feeds.toml
resources/project-types/python/: justfile
scripts/: README.md  migrate_chromadb_timestamps.py  sync_podcasts.py
soccer/: 20141025_EuroSoccer.R  20141025_EuroSoccer_wDiv.R  ForKaryn.Rmd  LaLiga.R  LaLiga_20141008.R  Untitled.R  mergedata(1).R
