[project]
name = "beige-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "torch",
    "feedparser",
    "toml>=0.10.2",
    "openai-whisper",
    "numpy<2.3",
    "pytest>=8.4.1",
    "tabulate>=0.9.0",
]

[project.scripts]
transcribe = "beige_book.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beige_book"]

[tool.uv.sources]
ask-human-mcp = { git = "https://github.com/Masony817/ask-human-mcp", rev = "24793b6362e000c12418cae7be5b8caa93cd371a" }

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
