[project]
name = "beige-book"
version = "0.1.0"
description = "Collect audio data from feeds"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch",
    "feedparser",
    "fastapi",
    "httpx",
    "toml>=0.10.2",
    "openai-whisper",
    "numpy<2.3",
    "pytest>=8.4.1",
    "tabulate>=0.9.0",
    "protobuf",
    "torchaudio",
    "huggingface-hub",
    "pyannote.audio>=3.1.0",
    "pinkhaus-models",
    "betterproto>=1.2.5",
    "uvicorn",
]

[project.scripts]
transcribe = "beige_book.main:main"
beige-book-server = "beige_book.run_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beige_book"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pinkhaus-models = { path = "../pinkhaus-models", editable = true }
ask-human-mcp = { git = "https://github.com/Masony817/ask-human-mcp", rev = "24793b6362e000c12418cae7be5b8caa93cd371a" }

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
