[project]
name = "grant"
version = "0.1.0"
description = "RAG tool using Ollama for custom data queries"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "aiosqlite",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.8.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pinkhaus-models",
]

[project.scripts]
grant = "grant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grant"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pinkhaus-models = { path = "../pinkhaus-models", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]
