[project]
name = "pinkhaus-models"
version = "0.1.0"
description = "Shared database models and schemas for pinkhaus projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pinkhaus_models"]