[project]
name = "sync-podcasts"
version = "0.1.0"
description = "Orchestrates podcast transcription and indexing pipeline"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "beige-book",
    "grant",
    "pinkhaus-models",
]

[project.scripts]
sync-podcasts = "sync_podcasts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sync_podcasts"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
beige-book = { path = "../beige-book", editable = true }
grant = { path = "../grant", editable = true }
pinkhaus-models = { path = "../pinkhaus-models", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]
